syntax = "proto3";
import "google/protobuf/timestamp.proto";

package cloud.lianmi.im.user;
option go_package = "github.com/lianmi/servers/api/proto/user";

//性别枚举定义
enum Gender {
    Sex_Unknown = 0;
    Sex_Male = 1;
    Sex_Female = 2;
}
//账号类型
enum UserType {
    Ut_Undefined = 0;
    //一般用户
    Ut_Normal = 1;
    //网点用户
    Ut_Business = 2;
    //操作员, 例如admin
    Ut_Operator = 3;
}
enum UserState {
    Ss_Unknow = 0;
    Ss_Normal = 1;
    Ss_Blocked = 2;

}

//根据用户ID批量获取用户信息,登录后拉取其他用户资料,添加好友查询好友资料
message GetUsersReq {
    repeated string usernames = 1;
}

message GetUsersResp {
    repeated User users = 1;
}

// 用户信息
message User {
    uint64 id        = 1;                         //ID
    string username  = 2;
    string passwd    = 3;                         //密码 是否必填-是
    Gender gender    = 4;
    string nick      = 5;
    string avatar    = 6;
    string label     = 7;
    string mobile    = 8;
    string email     = 9;
    UserType userType    = 10;
    UserState state      = 11;
    string extend        = 12;
    string contactPerson = 13;
    string introductory  = 14;
    string province      = 15;
    string city          = 16;
    string county        = 17;
    string street        = 18;
    string address       = 19;
    string branchesname  = 20;
    string legalPerson   = 21;
    string legalIdentityCard = 22;
    google.protobuf.Timestamp createdAt = 23;     //用户注册时间,Unix时间戳
    google.protobuf.Timestamp updatedAt = 24;     //用户资料最后更新时间,Unix时间戳
}