syntax = "proto3";

package cloud.lianmi.im.wallet;
option go_package = "github.com/lianmi/servers/api/proto/wallet";

message BalanceReq{
    //用户账号
    string userName=1;
    //钱包地址
    string walletAddress=2;
}

message BalanceRsp{
    //链上账号代币余额, 无小数点
    fixed64 amountLNMC=1;
    
    //链上账号以太币余额, 无小数点
    fixed64 amountETH=2;

    //时间 
    fixed64 time=3;

}